aerostore_macros/tests/ui/compile_fail_reserved_xmin.stderr
error: field name is reserved by #[speedtable]: _null_bitmask, _xmin, _xmax
 --> tests/ui/compile_fail_reserved_xmin.rs:6:5
  |
6 |     _xmin: u64,
  |     ^^^^^
