aerostore_macros/tests/ui/compile_fail_reserved_xmin.rs
use aerostore_macros::speedtable;

#[speedtable]
#[repr(C)]
struct BadReservedXmin {
    _xmin: u64,
    altitude: i32,
}

fn main() {}

